--- a/regressorComb.bib
+++ b/regressorComb.bib
@@ -1,5 +1,15 @@
 % Encoding: UTF-8
 
+@article{shi2020high,
+      title={High Dimensional Forecast Combinations Under Latent Structures}, 
+      author={Zhentao Shi and Liangjun Su and Tian Xie},
+      year={2020},
+      volume={2010.09477},
+      journal={arXiv},
+      primaryClass={econ.EM}
+}
+
+
 @InBook{theil1992forecasts,
   author    = {Theil, Henri},
   editor    = {Baldev Raj and Johan Koerts},
